我的投稿-原创稿件

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@vueup/vue-quill": "^1.0.0-alpha.40",
     "axios": "^1.6.8",
     "element-plus": "^2.6.0",
     "vue": "^3.2.13",
