--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueup/vue-quill": "^1.0.0-alpha.40",
     "axios": "^1.6.8",
+    "echarts": "^5.5.0",
     "element-plus": "^2.6.0",
     "quill": "^2.0.0",
     "vue": "^3.2.13",
