--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "less": "^4.2.0",
-    "less-loader": "^12.2.0"
+    "less-loader": "^12.2.0",
+    "terser-webpack-plugin": "^5.3.10"
   }
 }
